# djs

./: .gitignore  LICENSE  README.md  example.config.toml  pyproject.toml
djs/: main.py
djs/cli/: bar.py  foo.py
djs/config/: loader.py  schema.py
djs/core/: logic.py
djs/utils/: logging.py
tests/: test_core_logic.py
