[project]
name = "djs"
version = "0.1.0"
description = "DJ-Suite"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ingolf Ankert" }]
license = { file = "LICENSE" }
dependencies = ["click~=8.1"]

[project.scripts]
djs = "djs.main:djs"

[project.optional-dependencies]
dev = ["pytest~=8.0"]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"
